--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     #floaters {
       transition: opacity 1s ease-in-out;
     }
-    p {
+    #content {
       display: block;
       font-size: 28pt;
       text-align: center;
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-  <p id="float" contenteditable="true">
+  <p id="content" contenteditable="true">
     <span id="text">Snow is not in a globe, but is on your nose.</span>
   </p>
   <script src="index.js"></script>
